--- a/data_pipeline/requirements.txt
+++ b/data_pipeline/requirements.txt
@@ -13,6 +13,11 @@ mypy==1.7.1
 
 # Project dependencies
 numpy>=1.24.0
-google-cloud-storage>=2.10.0
 Pillow>=10.0.0
-python-magic>=0.4.27 
+requests>=2.31.0
+opencv-python>=4.8.0
+tqdm>=4.66.0
+selenium>=4.15.2
+webdriver-manager>=4.0.1
+beautifulsoup4>=4.12.2
+imagehash>=4.3.1 
