--- a/data_pipeline/requirements.txt
+++ b/data_pipeline/requirements.txt
@@ -20,4 +20,10 @@ tqdm>=4.66.0
 selenium>=4.15.2
 webdriver-manager>=4.0.1
 beautifulsoup4>=4.12.2
-imagehash>=4.3.1 
+imagehash>=4.3.1
+aiohttp>=3.8.5
+aiofiles>=23.2.1
+
+# GCP dependencies
+google-cloud-storage>=2.13.0
+python-dotenv>=1.0.0 
