--- a/training_pipeline/requirements.txt
+++ b/training_pipeline/requirements.txt
@@ -14,15 +14,22 @@ nbqa==1.7.1
 jupyter-black==0.3.4
 
 # Notebook dependencies
-jupyter==1.0.0
-ipykernel==6.27.1
+jupyter>=1.0.0
+ipykernel>=6.0.3
 notebook>=7.0.0
 
 # Project dependencies
-numpy>=1.24.0
+numpy>=1.19.5
 torch>=2.0.0
 torchvision>=0.15.0
-tensorflow>=2.13.0
-matplotlib>=3.7.0
-pandas>=2.0.0
-scikit-learn>=1.3.0 
+tensorflow>=2.5.0
+matplotlib>=3.4.2
+pandas>=1.3.0
+scikit-learn>=0.24.2
+google-cloud-storage>=1.42.0
+pillow>=8.3.1
+tqdm>=4.61.2
+python-dotenv>=0.19.0
+pyyaml>=6.0
+opencv-python>=4.5.3
+tensorboard>=2.5.0 
